--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "build:loader-styles": "webpack --config ./webpack.config.js",
     "build:plugins": "webpack --config ./webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack.config.js",
-    "build:babel": "webpack-dev-server --config ./webpack.config.js"
+    "build:babel": "webpack-dev-server --config ./webpack.config.js",
+    "build:react": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/runtime": "^7.5.5"
+    "@babel/runtime": "^7.5.5",
+    "react": "16.8.6",
+    "react-dom": "16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
