--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:plugins": "webpack --config ./webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack.config.js",
     "build:babel": "webpack-dev-server --config ./webpack.config.js",
-    "build:react": "webpack-dev-server --config ./webpack.config.js"
+    "build:react": "webpack-dev-server --config ./webpack.config.js",
+    "build:urlLoader": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,9 +30,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.1.0",
+    "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^2.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.7.2"
