--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build:dev": "webpack-dev-server --config ./webpack.config.js",
     "build:babel": "webpack-dev-server --config ./webpack.config.js",
     "build:react": "webpack-dev-server --config ./webpack.config.js",
-    "build:urlLoader": "webpack-dev-server --config ./webpack.config.js"
+    "build:urlLoader": "webpack-dev-server --config ./webpack.config.js",
+    "build:prepro": "webpack-dev-server --config ./webpack.config.js"
   },
   "author": "",
   "license": "ISC",
@@ -32,8 +33,16 @@
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-nested": "^4.1.2",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "url-loader": "^2.1.0",
     "webpack": "^4.37.0",
     "webpack-cli": "^3.3.6",
