--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
     // Pluguin asyn
+    "@babel/plugin-syntax-dynamic-import",
     "@babel/plugin-transform-runtime"
   ],
   "presets": [
