--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --entry ./index.js --output ./bundle.js --mode development",
     "build:local": "webpack --mode production",
-    "build:multi-points": "webpack --config ./webpack.config.js",
-    "build:loader-styles": "webpack --config ./webpack.config.js",
+    "build:multiPoints": "webpack --config ./webpack.config.js",
+    "build:loaderStyles": "webpack --config ./webpack.config.js",
     "build:plugins": "webpack --config ./webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack.config.js",
     "build:babel": "webpack-dev-server --config ./webpack.config.js",
@@ -18,7 +18,7 @@
     "build:prepro": "webpack-dev-server --config ./webpack.config.js",
     "build:notDuplication": "webpack --config ./webpack.config.js",
     "build:dll": "webpack --config ./webpack.dll.config.js",
-    "build:prevent-duplication-fast": "webpack --config ./webpack.config.js",
+    "build:preventDuplicationFast": "webpack --config ./webpack.config.js",
     "build:dynamic:dll": "webpack --config ./webpack.dll.config.js",
     "build:dynamic": "webpack --config ./webpack.config.js"
   },
